[gd_scene load_steps=8 format=3 uid="uid://mw2fv76w4sxj"]

[ext_resource type="Script" uid="uid://bbg8gjk3us0i7" path="res://scenes/ui/shop_item.gd" id="1_btjjm"]
[ext_resource type="Texture2D" uid="uid://bj6g84nfxwemt" path="res://art/fish/Surgeonfish.png" id="1_lrx6i"]
[ext_resource type="StyleBox" uid="uid://bdngju8qv1olw" path="res://scenes/ui/shop_item_affordable.tres" id="2_xcw7k"]
[ext_resource type="Texture2D" uid="uid://6ffjaldxnjy4" path="res://art/ui/icons8-recycle-48(1).png" id="3_6gmg1"]

[sub_resource type="Theme" id="Theme_6gmg1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1d7d6"]
bg_color = Color(0.14901961, 0.4392157, 0.47843137, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcw7k"]
bg_color = Color(0.14901961, 0.4392157, 0.47843137, 1)
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MarginContainer2" type="MarginContainer"]
anchors_preset = -1
anchor_right = 0.104
anchor_bottom = 0.27800003
offset_right = -119.808
offset_bottom = -180.14401
mouse_filter = 2
theme_override_constants/margin_left = 0
script = ExtResource("1_btjjm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_6gmg1")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer"]
self_modulate = Color(0.85490197, 0.38039216, 0.45882353, 1)
show_behind_parent = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("2_xcw7k")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1d7d6")

[node name="Name" type="Label" parent="MarginContainer/PanelContainer2/VBoxContainer/PanelContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5568628, 0.34509805, 1)
text = "BLUE FISH"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="FishTexture" type="TextureRect" parent="MarginContainer/PanelContainer2/VBoxContainer/MarginContainer"]
texture_filter = 1
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_lrx6i")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xcw7k")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="Cost" type="Label" parent="MarginContainer/PanelContainer2/VBoxContainer/PanelContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme_override_colors/font_color = Color(0.41960785, 0.68235296, 0.21176471, 1)
theme_override_font_sizes/font_size = 24
text = "200"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer2/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_6gmg1")
expand_mode = 2

[connection signal="gui_input" from="MarginContainer/PanelContainer2" to="." method="_on_panel_container_2_gui_input"]
[connection signal="mouse_entered" from="MarginContainer/PanelContainer2" to="." method="_on_panel_container_2_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/PanelContainer2" to="." method="_on_panel_container_2_mouse_exited"]
